[package]
name = "indexed_bitvec"
version = "4.0.1"
edition = "2018"
description = "An indexed bitvector with (hopefully) fast rank and select operations."
repository = "https://github.com/DarkOtter/indexed-bitvec-rs"

license = "Apache-2.0"
authors = ["DarkOtter <>"]
keywords = ["index", "indexing", "bits", "bitvector"]
categories = ["algorithms", "data-structures"]

[badges]
travis-ci = { repository = "DarkOtter/indexed-bitvec-rs" }

[workspace]
members = [ "core", "examples" ]

[features]
default = []
implement_heapsize = ["heapsize"]

[dependencies.indexed_bitvec_core]
path = "core"
version = "4"

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dependencies.heapsize]
optional = true
version = "0.4"

[dev-dependencies]
bincode = "1"
criterion = "0.2"
proptest = "0.8"
quickcheck = "0.8"
rand = "0.6"
rand_xorshift = "0.1"

[[bench]]
name = "operations"
harness = false
