[package]
name = "indexed_bitvec"
version = "5.0.0"
edition = "2018"
description = "Core operations on indexed bitvectors including (hopefully) fast rank and select operations."
repository = "https://github.com/DarkOtter/indexed-bitvec-rs"

license = "GPL-3.0+"
authors = ["DarkOtter <>"]
keywords = ["index", "indexing", "bits", "bitvector"]
categories = ["algorithms"]

[badges]
travis-ci = { repository = "DarkOtter/indexed-bitvec-rs" }

[features]
default = [ "std" ]
alloc = []
std = []

[dependencies]
static_assertions = "1"

[dev-dependencies]
proptest = "0.10"
oorandom = "11.1"

