[package]
name = "indexed_bitvec_core"
version = "4.0.0"
edition = "2018"
description = "Core operations on indexed bitvectors including (hopefully) fast rank and select operations."
repository = "https://github.com/DarkOtter/indexed-bitvec-rs"

license = "Apache-2.0"
authors = ["DarkOtter <>"]
keywords = ["index", "indexing", "bits", "bitvector"]
categories = ["algorithms"]

[badges]
travis-ci = { repository = "DarkOtter/indexed-bitvec-rs" }

[dev-dependencies]
proptest = "0.8"
quickcheck = "0.8"
rand = "0.6"
rand_xorshift = "0.1"
