[package]
name = "indexed_bitvec_core"
version = "2.1.0"
authors = ["DarkOtter <>"]
edition = "2018"
license = "Apache-2.0"
description = "Core operations on indexed bitvectors including (hopefully) fast rank and select operations."
repository = "https://github.com/DarkOtter/indexed-bitvec-rs"

[dev-dependencies]
rand = "0.6"
rand_xorshift = "0.1"
quickcheck = "0.7"
