[package]
name = "indexed_bitvec"
version = "2.0.0"
authors = ["DarkOtter <>"]
license = "Apache-2.0"
description = "An indexed bitvector with (hopefully) fast rank and select operations."
homepage = "https://github.com/DarkOtter/indexed-bitvec-rs"

[dependencies.indexed_bitvec_core]
path = "../indexed-bitvec-core"
version = "2.0"

[dev-dependencies]
rand = "0.5"
criterion = "0.2"

[[bench]]
name = "operations"
harness = false
