[package]
name = "indexed_bitvec"
version = "2.1.0"
authors = ["DarkOtter <>"]
edition = "2018"
license = "Apache-2.0"
description = "An indexed bitvector with (hopefully) fast rank and select operations."
repository = "https://github.com/DarkOtter/indexed-bitvec-rs"

[dependencies.indexed_bitvec_core]
path = "../indexed-bitvec-core"
version = "2.1"

[dev-dependencies]
rand = "0.6"
criterion = "0.2"

[[bench]]
name = "operations"
harness = false
