[package]
name = "indexed_bitvec"
version = "2.4.0"
edition = "2018"
description = "An indexed bitvector with (hopefully) fast rank and select operations."
repository = "https://github.com/DarkOtter/indexed-bitvec-rs"

license = "Apache-2.0"
authors = ["DarkOtter <>"]
keywords = ["index", "indexing", "bits", "bitvector"]
categories = ["algorithms", "data-structures"]

[features]
default = []
implement_heapsize = ["heapsize", "indexed_bitvec_core/implement_heapsize"]

[dependencies.indexed_bitvec_core]
path = "../indexed-bitvec-core"
version = "3"

[dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }

[dependencies.heapsize]
optional = true
version = "0.4"

[dev-dependencies]
rand = "0.6"
rand_xorshift = "0.1"
criterion = "0.2"

[[bench]]
name = "operations"
harness = false
